<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFilterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:text="@string/filter_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFilterTitle">

        <RadioButton
            android:id="@+id/radioButtonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_name" />

        <RadioButton
            android:id="@+id/radioButtonWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_weight" />

        <RadioButton
            android:id="@+id/radioButtonWeightDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_weight_desc" />

        <RadioButton
            android:id="@+id/radioButtonYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_year" />

        <RadioButton
            android:id="@+id/radioButtonYearDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_year_desc" />

        <RadioButton
            android:id="@+id/radioButtonFall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_fall" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonApply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/apply_filter"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupFilter" />

</androidx.constraintlayout.widget.ConstraintLayout>